--- a/app/views/admins/categories/edit.html.erb
+++ b/app/views/admins/categories/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Admins::Categories#edit</h1>
-<p>Find me in app/views/admins/categories/edit.html.erb</p>
+<h1>カテゴリ編集</h1>
+
+<%= form_with model: @category, url: "/admins/categories/#{@category.id}", local:true do |f| %>
+  <label>カテゴリー名</label>
+  <%= f.text_field :category_name %>
+  <%= f.submit "変更を保存" %>
+<% end %>
