--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -1,2 +1,44 @@
-<h1>Admins::Members#new</h1>
-<p>Find me in app/views/admins/members/new.html.erb</p>
+<h1>メンバー登録</h1>
+
+<%= form_with model: @member, url: new_admins_member_path, local:true do |f| %>
+
+  <label>姓</label>
+  <%= f.text_field :last_name %>
+  
+  <label>名</label>
+  <%= f.text_field :first_name %>
+  
+  <label>セイ</label>
+  <%= f.text_field :last_name_kana %>
+  
+  <label>メイ</label>
+  <%= f.text_field :first_name_kana %>
+  
+  <label>学年</label>
+  <%= f.text_field :grade %>
+  
+  <label>ポジション</label>
+  <%= f.text_field :position %>
+  
+  <label>身長</label>
+  <%= f.text_field :height %>
+  
+  <label>体重</label>
+  <%= f.text_field :weight %>
+  
+  <label>出身チーム</label>
+  <%= f.text_field :original_team %>
+  
+  <label>趣味</label>
+  <%= f.text_field :hobby %>
+  
+  <label>目標</label>
+  <%= f.text_field :goal %>
+
+  <label>選手画像</label>
+  <%= f.attachment_field :image %>  
+  
+  
+  <%= f.submit "新規登録" %>
+
+<% end %>
