--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -32,7 +32,7 @@
     <%= f.text_field :grade %>
     
     <%= f.radio_button :grade, Member.grades.key(0) %>
-    
+    <%= f.label :grade, "" 
   </div>
 
   <div class="form-group">
