--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Admins::Members#index</h1>
-<p>Find me in app/views/admins/members/index.html.erb</p>
+<h1>メンバー一覧</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>カテゴリー</th>
+      <th>学年</th>
+      <th>氏名</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @members.each do |member| %>
+    <tr>
+      <td><%= member.category.category_name %></td>
+      <td><%= member.grade_i18n %></td>
+      <td><%= member.last_name + " " + member.first_name %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
