--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -58,17 +58,17 @@
 
   <div class="form-group">
     <%= f.label :original_team, "出身チーム" %>
-    <%= f.text_field :original_team %>
+    <%= f.text_area :original_team %>
   </div>
 
   <div class="form-group">
     <%= f.label :hobby, "趣味" %>
-    <%= f.text_field :hobby %>
+    <%= f.text_area :hobby %>
   </div>
 
   <div class="form-group">
     <%= f.label :goal, "目標" %>
-    <%= f.text_field :goal %>
+    <%= f.text_area :goal %>
   </div>
 
   <div class="form-group">
