メンバー詳細画面からの削除機能実装

--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -49,3 +49,5 @@
 <label>目標</label>
 <%= @member.goal %>
 </div>
+
+<%= link_to "削除", admins_member_path(@member.id), method: :delete, "data-confirm" => "表示されているメンバーを削除しますか?" %>
