--- a/app/views/admins/graduates/show.html.erb
+++ b/app/views/admins/graduates/show.html.erb
@@ -4,10 +4,10 @@
   <%= attachment_image_tag @graduate, :image, :fill, 200, 200 %>
 </div>
 <div>
-  <%= @graduate.member_list %>
+  <%= safe_join(@graduate.member_list.split("\n"),tag(:br)) %>
 </div>
 <div>
-  <%= @graduate.career_after_graduation %>
+  <%= safe_join(@graduate.career_after_graduation.split("\n"),tag(:br)) %>
 </div>
 
 <%= link_to "編集", edit_admins_graduate_path(@graduate.id) %>
