--- a/app/views/admins/informations/edit.html.erb
+++ b/app/views/admins/informations/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Admins::Informations#edit</h1>
-<p>Find me in app/views/admins/informations/edit.html.erb</p>
+<h1>お知らせ編集</h1>
+
+<%= form_with model: @information, url: "/admins/informations/#{@information.id}", local:true do |f| %>
+
+<div class="form-group">
+  <%= f.radio_button :category, Information.categories.key(0) %>
+  <%= f.label :category, Information.categories_i18n[:general] %>
+  
+  <%= f.radio_button :category, Information.categories.key(1) %>
+  <%= f.label :category, Information.categories_i18n[:announcement] %>
+  
+  <%= f.radio_button :category, Information.categories.key(2) %>
+  <%= f.label :category, Information.categories_i18n[:other] %>
+</div>
+
+<div class="form-group">
+  <%= f.label :title, "タイトル" %>
+  <%= f.text_field :title %>
+</div>
+
+<div class="form-group">
+  <%= f.label :content, "内容" %>
+  <%= f.text_area :content %>
+</div>
+
+<div class="form-group">
+  <%= f.label :image, "画像" %>
+  <%= f.attachment_field :image %>
+</div>
+
+
+<div class="form-group">
+  <%= f.submit "内容を更新" %>
+</div>
+
+<% end %>
