--- a/app/views/admins/informations/index.html.erb
+++ b/app/views/admins/informations/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Admins::Informations#index</h1>
-<p>Find me in app/views/admins/informations/index.html.erb</p>
+<h1>お知らせ一覧</h1>
+
+<div>
+  <%= link_to "お知らせ登録", new_admins_information_path %>
+</div>
+
+<table>
+  <thead>
+    <tr>
+      <th>更新日</th>
+      <th>タイトル</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @informations.each do |information| %>
+    <tr>
+      <td><%= information.updated_at %></td>
+      <td><%= link_to information.title, admins_information_path(information.id) %></td>
+      <td><%= link_to "編集", edit_admins_information_path(information.id) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
