--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <%= link_to "OB紹介管理", admins_graduates_path %>
         </li>
         <li>
-          <%= link_to "スケジュール管理", admins_members_path %>
+          <%= link_to "スケジュール管理", admins_events_path %>
         </li>
         <li>
           <%= link_to "試合結果管理", admins_game_results_path %>
