--- a/app/views/admins/events/index.html.erb
+++ b/app/views/admins/events/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Admins::Events#index</h1>
-<p>Find me in app/views/admins/events/index.html.erb</p>
+<%= link_to "予定を追加", new_admins_event_path %>
+
+<%= month_calendar events: @events do |date, events| %>
+  <%= date.day %>
+  
+  <% events.each do |event| %>
+    <div>
+      <%= link_to event.title, admins_event_path(event.id) %>
+    </div>
+  <% end %>
+  
+<% end %>
