itemsコントローラ作成

--- a/app/views/admins/events/show.html.erb
+++ b/app/views/admins/events/show.html.erb
@@ -14,4 +14,4 @@
 </div>
 
 <%= link_to "編集", edit_admins_event_path(@event.id) %>
-<%= link_to "削除", admins_event_path(@event.id), method: :delete, "date-confirm" => "削除しますか？" %>
+<%= link_to "削除", admins_event_path(@event.id), method: :delete, "data-confirm" => "削除しますか？" %>
