--- a/app/views/admins/graduates/show.html.erb
+++ b/app/views/admins/graduates/show.html.erb
@@ -11,4 +11,4 @@
 </div>
 
 <%= link_to "編集", edit_admins_graduate_path(@graduate.id) %>
-<%= link_to "削除", admins_graduate_path(@graduate.id), method: :delete, "date-confirm" => "削除しますか？" %>
+<%= link_to "削除", admins_graduate_path(@graduate.id), method: :delete, "data-confirm" => "削除しますか？" %>
