--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admins::Items#index</h1>
-<p>Find me in app/views/admins/items/index.html.erb</p>
+<h1>アイテム一覧</h1>
+
+<div>
+  <%= link_to "アイテム登録", new_admins_item_path %>
+</div>
+
+<table>
+  <head>
+    <tr>
+      <th>アイテム</th>
+    </tr>
+  </head>
+  <tbody>
+    <% @items.each do |item| %>
+    <tr>
+      <td>
+        <%= link_to admins_item_path(item.id) do %>
+        <%= attachment_image_tag item, :image, :fill, 100, 100 %>
+        <% end %>
+      </td>
+      <td><%= item.name %></td>
+      <td><%= link_to "編集", edit_admins_item_path(item.id) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+
+</table>
