--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <%= link_to "保護者専用お知らせ管理", admins_game_results_path %>
         </li>
         <li>
-          <%= link_to "応援グッズ登録", admins_game_results_path %>
+          <%= link_to "応援グッズ登録", admins_items_path %>
         </li>
         <li>
           <%= link_to "注文管理", admins_game_results_path %>
