--- a/app/views/guardians/registrations/new.html.erb
+++ b/app/views/guardians/registrations/new.html.erb
@@ -1,7 +1,56 @@
-<h2>Sign up</h2>
+<h2>保護者登録画面</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "guardians/shared/error_messages", resource: resource %>
+<%= form_with model: @guardian, url: '/guardians', local: true do |f| %>
+
+<div class="field">
+    <%= f.label :last_name, "姓" %><br />
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :first_name, "名" %><br />
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name_kana, "セイ" %><br />
+    <%= f.text_field :last_name_kana %>
+  </div>
+
+  <div class="field">
+    <%= f.label :first_name_kana, "メイ" %><br />
+    <%= f.text_field :first_name_kana %>
+  </div>
+
+  <div class="field">
+    <%= f.label :relationship, "続柄" %><br />
+    <%= f.text_field :relationship %>
+  </div>
+
+  <div class="field">
+    <%= f.label :member_name, "生徒氏名" %><br />
+    <%= f.text_field :member_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :year_of_enrollment, "入学年度" %><br />
+    <%= f.text_field :year_of_enrollment %>
+  </div>
+
+  <div class="field">
+    <%= f.label :postal_code, "郵便番号" %><br />
+    <%= f.text_field :postal_code %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address, "住所" %><br />
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
+    <%= f.label :tel, "電話番号" %><br />
+    <%= f.text_field :tel %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -22,8 +71,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
+
 <% end %>
 
-<%= render "guardians/shared/links" %>
+
+<%= link_to "こちら", new_guardian_session_path %>　からログインしてください。
