--- a/app/views/guardians/homes/edit.html.erb
+++ b/app/views/guardians/homes/edit.html.erb
@@ -1,6 +1,6 @@
-<h2>標準機能の方編集画面</h2>
+<h2>画面</h2>
 
-<%= form_with model: @guardian, url: "/guardians/", local: true do |f| %>
+<%= form_with model: @guardian, url: "/guardians/homes/#{@guardian.id}", local: true do |f| %>
 
 <div class="field">
     <%= f.label :last_name, "姓" %><br />
@@ -57,9 +57,3 @@
   </div>
 
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
