保護者詳細、編集、削除機能実装

--- a/app/views/admins/guardians/index.html.erb
+++ b/app/views/admins/guardians/index.html.erb
@@ -20,7 +20,7 @@
       <td><%= guardian.member_name %></td>
       <td><%= guardian.tel %></td>
       <td><%= guardian.email %></td>
-      <td><%= link_to "編集",  edit_admins_guardian_path(guardian.id) %></td>
+      <td><%= link_to "詳細",  admins_guardian_path(guardian.id) %></td>
     </tr>
     <% end %>
   </tbody>
