--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,13 @@
         <li>
           <%= link_to "お問い合わせ管理", admins_game_results_path %>
         </li>
+        <li>
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+        </li>
       <% else%>
+        <li>
+          <%= link_to "保護者専用お知らせ管理", guardians_information_for_guardians_path %>
+        </li>
       <% end %>
     </ul>
   </div>
