--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,9 @@
         <li>
           <%= link_to "保護者専用お知らせ管理", guardians_information_for_guardians_path %>
         </li>
+        <li>
+          <%= link_to "お問い合わせ", new_contact_path %>
+        </li>
       <% end %>
     </ul>
   </div>
