--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           <%= link_to "注文管理", admins_game_results_path %>
         </li>
         <li>
-          <%= link_to "お問い合わせ管理", admins_game_results_path %>
+          <%= link_to "お問い合わせ管理", admins_contacts_path %>
         </li>
         <li>
           <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
