--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,9 @@
         </li>
       <% else%>
         <li>
+          <%= link_to "応援グッズ", items_path %>
+        </li>
+        <li>
           <%= link_to "保護者専用お知らせ管理", guardians_information_for_guardians_path %>
         </li>
         <li>
