--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,33 @@
  *= require_tree .
  *= require_self
  */
- 
+ @import "bootstrap";
+
+* {
+ margin: 0;
+ padding: 0;
+}
+
+
+ header {
+   background-color: #f0831e;
+ }
+
+header img {
+  width: 200px;
+  height: auto;
+}
+
+main {
+    min-height: 100vh;
+    position: relative;/*←相対位置*/
+}
+
+footer {
+  psition: absolute; /*絶対位置*/
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background-color: #f0831e;
+}
