--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,60 +9,76 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <header>
-  <div>
-    <ul>
-      <% if admin_signed_in? %>
-        <li>
-          <%= link_to "カテゴリー登録", admins_categories_path %>
-        </li>
-        <li>
-          <%= link_to "選手・スタッフ管理", admins_members_path %>
-        </li>
-        <li>
-          <%= link_to "OB紹介管理", admins_graduates_path %>
-        </li>
-        <li>
-          <%= link_to "スケジュール管理", admins_events_path %>
-        </li>
-        <li>
-          <%= link_to "試合結果管理", admins_game_results_path %>
-        </li>
-        <li>
-          <%= link_to "お知らせ管理", admins_informations_path %>
-        </li>
-        <li>
-          <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path %>
-        </li>
-        <li>
-          <%= link_to "保護者管理", admins_guardians_path %>
-        </li>
-        <li>
-          <%= link_to "応援グッズ登録", admins_items_path %>
-        </li>
-        <li>
-          <%= link_to "注文管理", admins_game_results_path %>
-        </li>
-        <li>
-          <%= link_to "お問い合わせ管理", admins_contacts_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-        </li>
-      <% else%>
-        <li>
-          <%= link_to "応援グッズ", items_path %>
-        </li>
-        <li>
-          <%= link_to "保護者専用お知らせ管理", guardians_information_for_guardians_path %>
-        </li>
-        <li>
-          <%= link_to "お問い合わせ", new_contact_path %>
-        </li>
-      <% end %>
-    </ul>
+<header>
+  <div class="container">
+    <div class="row justify-content-around align-items-end">
+      
+      <div class="col"><a href="/"><img src="/assets/logo.png" alt="青山高校サッカー部"></a></div>
+      <ul  class="col-8 list-inline">
+        <% if admin_signed_in? %>
+          <li class="list-inline-item">
+            <%= link_to "カテゴリー登録", admins_categories_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "選手・スタッフ管理", admins_members_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "OB紹介管理", admins_graduates_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "スケジュール管理", admins_events_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "試合結果管理", admins_game_results_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "お知らせ管理", admins_informations_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "保護者管理", admins_guardians_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "応援グッズ登録", admins_items_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "注文管理", admins_game_results_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "お問い合わせ管理", admins_contacts_path %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+          </li>
+        <% else%>
+          <li class="list-inline-item">
+            <%= link_to "選手・スタッフ", items_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "お知らせ", items_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "スケジュール", items_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "試合結果", items_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "応援グッズ", items_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "保護者専用", guardians_information_for_guardians_path, class: 'text-dark' %>
+          </li>
+          <li class="list-inline-item">
+            <%= link_to "お問い合わせ", new_contact_path, class: 'text-dark' %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-  </header>
+</header>
 
   <body>
     <%= yield %>
