TOPページfooter編集

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,24 @@
 <footer>
-  <div class="border-top">
-    <p>CopyRight 2021 denozo</p>
+  <div class="footer-main container-fluid mt-5">
+    
+    <div class="row">
+      <div class="footer-logo">
+        <img src="/assets/footerlogo.png" alt="青山高校サッカー部"></a>
+      </div>
+      <div class="footer-info">
+        <p>
+          学校法人 青山学院<br>
+          青山高等学校 サッカー部<br>
+          〒000-0000<br>
+          　青森県青森市青山１丁目１１番地５丁目<br>
+          TEL:0100-0000-0000<br>
+          FAX:0200-0000-0000<br>
+        </p>
+      </div>
+    </div>
+    
+    <div class="row justify-content-around mt-5">
+      <p>CopyRight 2021 denozo</p>
+    </div>
   </div>
 </footer>
