--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,11 +35,11 @@ main {
     position: relative;/*←相対位置*/
 }
 
-footer {
+.footer-main {
   psition: absolute; /*絶対位置*/
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 200px;
+  height: 500px;
   background-color: #f0831e;
 }
