--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,39 +1,77 @@
 <main>
-<div class="container">
-    <!--カルーセル外枠-->
-    <div id="main-visual" class="carousel slide" data-ride="carousel">
-        <!--インジケーター-->
-        <ol class="carousel-indicators">
-            
-        </ol>
-        <!--カルーセル内枠-->
-        <div class="carousel-inner">
-            <!--スライド01-->
-            <div class="carousel-item active">
-                <img class="img-fluid" src="/assets/top/2021-01.jpg" alt="青山高校サッカー部">
+    <div class="main_visual">
+        <div class="py-4">
+            <div class="container">
+                <!--カルーセル外枠-->
+                <div id="main_visual" class="carousel slide" data-ride="carousel">
+                    <!--インジケーター-->
+                    <ol class="carousel-indicators">
+                        <li data-target="#main_visual" data-slide-to="0" class="active"></li>
+                        <li data-target="#main_visual" data-slide-to="1"></li>
+                        <li data-target="#main_visual" data-slide-to="2"></li>
+                        <li data-target="#main_visual" data-slide-to="3"></li>
+                    </ol>
+                    <!--カルーセル内枠-->
+                    <div class="carousel-inner">
+                        <!--スライド01-->
+                        <div class="carousel-item active">
+                            <img class="img-fluid" src="/assets/top/2021-01.jpg" alt="青山高校サッカー部">
+                        </div>
+                        <!--スライド02-->
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="/assets/top/2021-02.jpg" alt="青山高校サッカー部">
+                        </div>
+                        <!--スライド03-->
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="/assets/top/2021-03.jpg" alt="青山高校サッカー部">
+                        </div>
+                        <!--スライド04-->
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="/assets/top/2021-04.jpg" alt="青山高校サッカー部">
+                        </div>
+                    </div>
+
+                        <!--コントローラ-->
+                    <a class="carousel-control-prev" href="#main_visual" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">前に戻る</span>
+                    </a>
+                    <a class="carousel-control-next" href="#main_visual" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">次に進む</span>
+                    </a>
+                </div>
             </div>
-            <!--スライド02-->
-            <div class="carousel-item active">
-                <img class="img-fluid" src="/assets/top/2021-02.jpg" alt="青山高校サッカー部">
-            </div>
-            <!--スライド03-->
-            <div class="carousel-item active">
-                <img class="img-fluid" src="/assets/top/2021-03.jpg" alt="青山高校サッカー部">
-            </div>
-            
-            <!--コントローラ-->
-            <a class="carousel-control-prev" href="#main_visual" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">前に戻る</span>
-            </a>
-            <a class="carousel-control-prev" href="#main_visual" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">次に進む</span>
-            </a>
         </div>
     </div>
-</div>
+
+    <div class="container">
+        <h4>お知らせ新着</h4>
+    </div>
+
+    <div class="main_info container">
+        <div class="row justify-content-around">
+            <% @informations.each do |information| %>
+            <!--カードの枠-->
+            <article class="card mt-4" style="max-width: 20rem;">
+                <!--カード本文-->
+                <div class="card-body">
+                    <!--カードの副見出し-->
+                    <h7 class="card-subtitle"><%= "<" + information.category_i18n + ">" %></h6>
+                    <!--カードの見出し-->
+                    <h6 class="card-title"><%= information.title %></h4>
+                    <!--カードの内容文--->
+                    <p class="card-text"></p>
+                </div>
+                <!--カード下部に画像を表示-->
+                <%= attachment_image_tag information, :image, class: "card-img-button" %>
+            </article>
+            <% end %>
+        </div>
+    </div>
+
 </main>
+
 
 <!--フッター-->
 <%= render '/layouts/footer' %>
