socialアイコン設定

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-main container-fluid mt-5">
-    
+
     <div class="row">
       <div class="footer-logo">
         <img src="/assets/footerlogo.png" alt="青山高校サッカー部"></a>
@@ -15,8 +15,15 @@
           FAX:0200-0000-0000<br>
         </p>
       </div>
+
+      <div class="footer-social">
+        <a href="/"><i class="fab fa-facebook-square fa-4x text-dark"></i></a>
+        <a href="/"><i class="fab fa-twitter-square fa-4x text-dark"></i></a>
+        <a href="/"><i class="fab fa-instagram fa-4x text-dark"></i></a>
+      </div>
+
     </div>
-    
+
     <div class="row justify-content-around mt-5">
       <p>CopyRight 2021 denozo</p>
     </div>
