--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
 
 
  header {
-   background-color: #f0831e;
+   background-color: #fd7e00;
  }
 
 header img {
@@ -40,6 +40,6 @@ main {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 500px;
-  background-color: #f0831e;
+  height: auto;
+  background-color: #fd7e00;
 }
