--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>AoyamaFootballClub</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
     <script src="https://kit.fontawesome.com/a0ac96da17.js" crossorigin="anonymous"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -12,74 +12,89 @@
   </head>
 
 <header>
-  <div class="container">
-    <div class="row justify-content-around align-items-end">
-      
-      <div class="col"><a href="/"><img src="/assets/logo.png" alt="青山高校サッカー部"></a></div>
-      <ul  class="col-8 list-inline">
-        <% if admin_signed_in? %>
-          <li class="list-inline-item">
-            <%= link_to "カテゴリー登録", admins_categories_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "選手・スタッフ管理", admins_members_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "OB紹介管理", admins_graduates_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "スケジュール管理", admins_events_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "試合結果管理", admins_game_results_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "お知らせ管理", admins_informations_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "保護者管理", admins_guardians_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "応援グッズ登録", admins_items_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "注文管理", admins_game_results_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "お問い合わせ管理", admins_contacts_path %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-          </li>
-        <% else%>
-          <li class="list-inline-item">
-            <%= link_to "選手・スタッフ", items_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "お知らせ", items_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "スケジュール", items_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "試合結果", items_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "応援グッズ", items_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "保護者専用", guardians_information_for_guardians_path, class: 'text-dark' %>
-          </li>
-          <li class="list-inline-item">
-            <%= link_to "お問い合わせ", new_contact_path, class: 'text-dark' %>
-          </li>
-        <% end %>
-      </ul>
+  <!--ナビゲーションバー-->
+  <nav class="navbar navbar-expand-md navbar-dark sticky-top">
+    <!--サブコンポーネント-->
+    <div class="container">
+      <!--ブランド-->
+      <a href="/", class="pr-5"><img src="/assets/logo.png" alt="青山高校サッカー部"></a>
+
+      <!--切り替えボタン-->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--ナビゲーション-->
+      <div class="collapse navbar-collapse" id="navbar-content">
+        <ul  class="navbar-nav mr-auto">
+          <% if admin_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "カテゴリー登録", admins_categories_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "選手・スタッフ管理", admins_members_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "OB紹介管理", admins_graduates_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "スケジュール管理", admins_events_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "試合結果管理", admins_game_results_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "お知らせ管理", admins_informations_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "保護者管理", admins_guardians_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "応援グッズ登録", admins_items_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "注文管理", admins_game_results_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "お問い合わせ管理", admins_contacts_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
+            </li>
+          <% else%>
+            <li class="nav-item">
+              <%= link_to "サッカー部について", about_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "選手・スタッフ", members_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "お知らせ", items_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "スケジュール", items_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "試合結果", items_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "応援グッズ", items_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "保護者専用", guardians_information_for_guardians_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "お問い合わせ", new_contact_path, class: 'nav-link text-dark' %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
-  </div>
+  </nav>
+
 </header>
 
   <body>
