--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -3,19 +3,33 @@
 <table>
   <thead>
     <tr>
+      <th>イメージ</th>
       <th>商品名</th>
       <th>単価</th>
       <th>数量</th>
       <th>小計</th>
     </tr>
   </thead>
+
   <tbody>
     <% @cart_items.each do |cart_item| %>
     <tr>
-      <td><%= attachment_image_tag cart_item.item, :image, :fill, 80, 40 %></td>
+      <td><%= attachment_image_tag cart_item.item, :image, :fill, 150, 100 %></td>
       <td><%= cart_item.item.name %></td>
-      <td><%= cart_item.amount.to_s + "個" %></td>
+      <td><%= cart_item.item.with_tax_price.to_s(:delimited) + "円" %></td>
+      <td>
+        <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch, loacl:true do |f| %>
+          <%= f.select :amount, *[1..10],include_blank: " 個数選択 ", selected: cart_item.amount %>
+          <%= f.submit '変更', class: "btn btn-success" %>
+        <% end %>
+      </td>
+      <td><%= cart_item.subtotal.to_s(:delimited) + "円" %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
+
+<p><%= "数量：" + @amount_sum.to_s(:delimited) + "個" %></p>
+<p><%= "合計：" + @sum.to_s(:delimited) + "円" %></p>
+
+<%= link_to "注文内容入力に進む", new_order_path, class: "btn btn-success #{ 'activecolor' if @condition }" %>
