--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,5 +1,11 @@
 <h1>カート内商品</h1>
 
+<p id="notice" class="font-weight-bold">
+  <%= notice %> <!-- サクセスメッセージの表示 -->
+</p>
+
+<%= link_to 'カートを空にする', destroyall_cart_items_path, class: 'Dastroy btn btn-danger', method: :delete, "data-confirm" => "カートを空にする？" %>
+
 <table>
   <thead>
     <tr>
@@ -33,3 +39,7 @@
 <p><%= "合計：" + @sum.to_s(:delimited) + "円" %></p>
 
 <%= link_to "注文内容入力に進む", new_order_path, class: "btn btn-success #{ 'activecolor' if @condition }" %>
+
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
