--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,44 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+<h1>注文情報入力画面</h1>
+
+<%= form_with model: @order, url: confirm_orders_path, local:true do |f| %>
+
+  <div class="form_group">
+    <%= f.label :product_passing, "お渡しの方法" %>
+    <%= f.radio_button :product_passing, Order.product_passings.key(0) %>
+    <%= f.label :product_passing, Order.product_passings_i18n[:delivery] %>
+    <%= f.radio_button :product_passing, Order.product_passings.key(1) %>
+    <%= f.label :product_passing, Order.product_passings_i18n[:other] %>
+  </div>
+
+  <div class="form_group">
+    <%= f.label :other, "その他受取場所" %>
+    <%= f.text_field :other, placeholder: '試合会場、生徒に渡すなど' %>
+  </div>
+
+  <div class="form_group">
+    <%= f.label :postal_code, "配送先郵便番号" %>
+    <%= f.text_field :postal_code %>
+  </div>
+
+  <div class="form_group">
+    <%= f.label :address, "配送先住所" %>
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="form_group">
+    <%= f.label :addressee, "配送先宛名" %>
+    <%= f.text_field :addressee, placeholder: '鈴木　花子' %>
+  </div>
+
+  <div class="form_group">
+    <%= f.label :payment_method, "支払方法" %>
+    <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:cash] %>
+    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:transfer] %>
+  </div>
+  
+  
+  <%= submit_tag '確認画面へ進む',class: 'btn btn-success' %>
+
+<% end %>
