注文詳細小計を残してそれ以外を実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
               <%= link_to "応援グッズ登録", admins_items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "注文管理", admins_game_results_path, class: 'nav-link text-dark' %>
+              <%= link_to "注文管理", admins_orders_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "お問い合わせ管理", admins_contacts_path, class: 'nav-link text-dark' %>
