--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -31,8 +31,26 @@
 <p><%= "支払合計：" + @order.total_payment.to_s(:delimited) + "円" %></p>
 
 
-<label>支払方法</label><%= @order.payment_method_i18n %>
+<label>支払方法：</label>
+<%= @order.payment_method_i18n %>
 
-<label>支払方法</label><%= @order.postal_code %>
-<label>支払方法</label><%= @order.address %>
-<label>支払方法</label><%= @order.name %>
+<label>配送先郵便番号：</label>
+<%= @order.postal_code %>
+
+<label>配送先住所：</label>
+<%= @order.address %>
+
+<label>配送先宛名：</label>
+<%= @order.name %>
+
+<%= form_with model: @order, url: '/orders', method: :post, local: true do |f| %>
+  <%= f.hidden_field :product_passing, value: @order.product_passing %>
+  <%= f.hidden_field :postal_code, value: @order.postal_code %>
+  <%= f.hidden_field :address, value: @order.address %>
+  <%= f.hidden_field :name, value: @order.name %>
+  <%= f.hidden_field :payment_method, value: @order.payment_method %>
+  <%= f.hidden_field :shipping_cost, value: @order.shipping_cost %>
+  <%= f.hidden_field :addressee, value: @order.addressee %>
+  <%= f.hidden_field :total_payment, value: @order.total_payment %>
+  <%= f.submit '注文を確定する', class: "btn btn-success" %>
+<% end %>
