--- a/app/views/orders/thanks.html.erb
+++ b/app/views/orders/thanks.html.erb
@@ -1,2 +1,3 @@
-<h1>Orders#thanks</h1>
-<p>Find me in app/views/orders/thanks.html.erb</p>
+<h1>ご注文ありがとうございます！！</h1>
+<p>商品が整い次第担当者よりメールにてご連絡いたします。<br>
+今後青山高校サッカー部を応援よろしくお願いいたします！！</p>
