アバウトページ編集開始

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,8 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<h1>XX県立青山高等学校サッカー部</h1>
+
+<p>XX県立青山高等学校は、XX県XX町にあります。今年で創設90年を迎える伝統ある学校です。</p>
+
+<img src="/assets/about/about1.jpg" alt="青山高校サッカー部"></a>
+
+<h1>過去の功績</h1>
+<p></p>
