--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,22 +1,38 @@
-<h1>アイテム一覧</h1>
+<div class="container">
+    <h4 class="m-5">応援グッズ</h4>
+</div>
 
-<table>
-  <head>
-    <tr>
-      <th>アイテム</th>
-    </tr>
-  </head>
-  <tbody>
-    <% @items.each do |item| %>
-    <tr>
-      <td>
-        <%= link_to item_path(item.id) do %>
-        <%= attachment_image_tag item, :image, :fill, 100, 100 %>
+<div class="container">
+    <div class="row justify-content-center card-columns">
+        <% @items.each do |item| %>
+        <!--カードの枠-->
+        <article class="card h-100 mt-4" style="max-width: 20rem;">
+            <!--カード本文-->
+            <div class="card-body">
+                <!--カードの見出し-->
+                <h4 class="card-title font-weight-bold"><%= item.name %></h4>
+            </div>
+            <!--カード下部に画像を表示-->
+            <%= link_to item_path(item.id) do %>
+              <%= attachment_image_tag item, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300', class: "card-img-button" %>
+            <% end %>
+            <!--カードの副見出し-->
+            <div class="card-footer">
+              <h7 class="card-subtitle"><%= item.with_tax_price.to_s(:delimited) + "円（税込）" %></h6>
+            </div>
+        </article>
         <% end %>
-      </td>
-      <td><%= item.name %></td>
-    </tr>
-    <% end %>
-  </tbody>
+    </div>
+</div>
 
-</table>
+<div class="container m-5">
+  <p>応援グッズの売り上げの一部は、青山学校サッカー部の活動資金に充てさせて頂きます。<br>
+    ・活動運営費の不足分<br>
+    ・スポーツドリンクなどのサポート補食費<br>
+    など<br>
+  </p>
+</div>
+
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
