--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,44 +1,41 @@
-<main>
-  <div class="container">
-      <h4 class="m-5">スタッフ・選手詳細</h4>
-  </div>
+<div class="container">
+    <h4 class="m-5">スタッフ・選手詳細</h4>
+</div>
 
-  <div class="container">
-    <div class="row">
-      <!--メンバー画像-->
-      <div class="col">
-        <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
-      </div>
-      <!--メンバー詳細説明-->
-      <div class="col font-weight-bold h3 pt-5">
-        <label>氏名：</label>
-        <%= @member.last_name + " " + @member.first_name %>
-        <br>
-        <label>学年：</label>
-        <%= @member.grade_i18n %>
-        <br>
-        <label>ポジション：</label>
-        <%= @member.position %>
-        <br>
-        <label>身長：</label>
-        <%= @member.height %>
-        <br>
-        <label>体重：</label>
-        <%= @member.weight %>
-        <br>
-        <label>出身チーム：</label>
-        <%= @member.original_team %>
-        <br>
-        <label>趣味：</label>
-        <%= @member.hobby %>
-        <br>
-        <label>目標：</label>
-        <%= @member.goal %>
-      </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <!--メンバー画像-->
+    <div class="col">
+      <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
+    </div>
+    <!--メンバー詳細説明-->
+    <div class="col font-weight-bold pt-5">
+      <label>氏名：</label>
+      <%= @member.last_name + " " + @member.first_name %>
+      <br>
+      <label>学年：</label>
+      <%= @member.grade_i18n %>
+      <br>
+      <label>ポジション：</label>
+      <%= @member.position %>
+      <br>
+      <label>身長：</label>
+      <%= @member.height %>
+      <br>
+      <label>体重：</label>
+      <%= @member.weight %>
+      <br>
+      <label>出身チーム：</label>
+      <%= @member.original_team %>
+      <br>
+      <label>趣味：</label>
+      <%= @member.hobby %>
+      <br>
+      <label>目標：</label>
+      <%= @member.goal %>
     </div>
   </div>
-</main>
-
+</div>
 
 <!--フッター-->
 <%= render '/layouts/footer' %>
