--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,13 +72,13 @@
               <%= link_to "選手・スタッフ", members_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "お知らせ", items_path, class: 'nav-link text-dark' %>
+              <%= link_to "お知らせ", informations_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "スケジュール", items_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "試合結果", items_path, class: 'nav-link text-dark' %>
+              <%= link_to "試合結果", game_results_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "応援グッズ", items_path, class: 'nav-link text-dark' %>
