--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container w-50">
+<section class="container w-50">
   <h2 class="section-ttl">アイテム詳細</h2>
   <div class="flex">
     <%= attachment_image_tag @item, :image, :fill, 200, 200 %>
@@ -29,7 +29,7 @@
       <% end %>
     </div>
   </div>
-</div>
+</section>
 
 <!--フッター-->
 <%= render '/layouts/footer' %>
