--- a/app/views/contacts/complete.html.erb
+++ b/app/views/contacts/complete.html.erb
@@ -1,7 +1,10 @@
-<h1>お問い合わせ完了</h1>
+<section class="container w-50 mt-5">
 
-<h3>お問い合わせありがとうございました。</h3>
-
-<p>
-  確認メールご確認ください。
-</p>
+  <h3>お問い合わせありがとうございました！</h3>
+  
+  <p>後日担当者よりメールにてご返信いたします。<br />
+  通常は、2営業日以内にご返信させていただいております。<br />
+  土日祝日等、休業日に頂いたお問い合わせにつきましては、<br />
+  翌営業日以降の回答とさせていただきます。</p>
+  
+</section>
