--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,16 +1,28 @@
-<h1>お問い合わせフォーム</h1>
+<section class="container w-50 mt-5">
+  <h2 class="section-ttl row mb-3">お問い合わせフォーム</h2>
 
-<%= form_with model: @contact, local: true, url: {action: :confirm} do |f| %>
+  <div class="form-group">
+    <%= form_with model: @contact, local: true, url: {action: :confirm} do |f| %>
 
-  <%= f.label :name, 'お名前' %>
-  <%= f.text_field :name, autofocus: true, placeholder:'田中 太郎' %>
-  
-  <%= f.label :email, 'メールアドレス' %>
-  <%= f.text_field :email, placeholder:'test@hoge.com' %>
-  
-  <%= f.label :content, 'お問い合わせ内容' %>
-  <%= f.text_area :content, placeholder:'お問い合わせ内容は10文字以上でお願いします' %>
-  
-  <%= f.submit '確認画面へ進む' %>
+      <div class="mb-3">
+        <%= f.label :name, 'お名前', class: "form-label" %><br />
+        <%= f.text_field :name, autofocus: true, placeholder:'田中 太郎', class: "form-control" %><br />
+      </div>
 
-<% end %>
+      <div class="mb-3">
+        <%= f.label :email, 'メールアドレス', class: "form-label" %><br />
+        <%= f.text_field :email, placeholder:'name@example.com', class: "form-control" %><br />
+      </div>
+
+
+      <%= f.label :content, 'お問い合わせ内容', class: "form-label" %><br />
+      <%= f.text_area :content, placeholder:'お問い合わせ内容は10文字以上でお願いします', class: "form-control col-md-12" %><br />
+
+      <%= f.submit '確認画面へ進む', class: "btn btn-outline-secondary" %><br />
+
+    <% end %>
+  </div>
+</section>
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
