--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
               <%= link_to "お知らせ", informations_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "スケジュール", items_path, class: 'nav-link text-dark' %>
+              <%= link_to "スケジュール", events_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "試合結果", game_results_path, class: 'nav-link text-dark' %>
