--- a/app/views/admins/members/index.html.erb
+++ b/app/views/admins/members/index.html.erb
@@ -1,25 +1,41 @@
-<h1>メンバー一覧</h1>
+<section class="container w-50 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">メンバー一覧</h2>
 
-<div>
-  <%= link_to "スタッフ・選手登録", new_admins_member_path %>
-</div>
+  <!--メンバー追加画面へのリンク-->
+  <div>
+    <%= link_to "スタッフ・選手を登録する", new_admins_member_path, class: "btn btn-success m-3" %>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>カテゴリー</th>
-      <th>学年</th>
-      <th>氏名</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @members.each do |member| %>
-    <tr>
-      <td><%= link_to member.category.category_name, admins_member_path(member.id) %></td>
-      <td><%= member.grade_i18n %></td>
-      <td><%= member.last_name + " " + member.first_name %></td>
-      <td><%= link_to "編集", edit_admins_member_path(member.id) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+  <!--メンバー一覧-->
+
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>カテゴリー</th>
+        <th>学年</th>
+        <th>氏名</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @members.each do |member| %>
+      <tr>
+        <td><%= link_to member.last_name + " " + member.first_name,admins_member_path(member.id) %></td>
+        <td><%= member.category.category_name %></td>
+        <td><%= member.grade_i18n %></td>
+        <td><%= link_to "編集する", edit_admins_member_path(member.id), class: "text-dark link-secondary" %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+</section>
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
