--- a/app/views/admins/guardians/edit.html.erb
+++ b/app/views/admins/guardians/edit.html.erb
@@ -1,59 +1,78 @@
-<h2>保護者編集画面</h2>
-
-<%= form_with model: @guardian, url: "/guardians/homes/#{@guardian.id}", local: true do |f| %>
-
-<div class="field">
-    <%= f.label :last_name, "姓" %><br />
-    <%= f.text_field :last_name %>
+<section class="inner">
+  <!--セッションタイトル-->
+  <div class="section-ttl">
+    <h4 class="">保護者編集画面</h4>
   </div>
 
-  <div class="field">
-    <%= f.label :first_name, "名" %><br />
-    <%= f.text_field :first_name %>
-  </div>
+  <form class="container admins_guardians_edit">
+    <%= form_with model: @guardian, url: "/guardians/homes/#{@guardian.id}", local: true do |f| %>
+    <!--保護者編集フォーム-->
+      <!--氏名-->
+      <div class="row">
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :last_name, "姓", class: "form-label" %>
+          <%= f.text_field :last_name, class: "form-control" %>
+        </div>
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :first_name, "名", class: "form-label" %>
+          <%= f.text_field :first_name, class: "form-control" %>
+        </div>
+      </div>
+      <!--フリガナ-->
+      <div class="row">
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :last_name_kana, "セイ", class: "form-label" %>
+          <%= f.text_field :last_name_kana, class: "form-control" %>
+        </div>
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :first_name_kana, "メイ", class: "form-label" %>
+          <%= f.text_field :first_name_kana, class: "form-control" %>
+        </div>
+      </div>
+      <!--生徒氏名・入学年度・続柄-->
+      <div class="row">
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :member_name, "生徒氏名", class: "form-label" %>
+          <%= f.text_field :member_name, class: "form-control" %>
+        </div>
+        <div class="col-3 form-group">
+          <%= f.label :year_of_enrollment, "入学年度", class: "form-label" %>
+          <%= f.text_field :year_of_enrollment, class: "form-control" %>
+        </div>
+        <div class="col-3 form-group">
+          <%= f.label :relationship, "続柄", class: "form-label" %>
+          <%= f.text_field :relationship, class: "form-control" %>
+        </div>
+      </div>
+      <!--郵便番号-->
+      <div class="row">
+        <div class="col-3 form-group">
+          <%= f.label :postal_code, "郵便番号", class: "form-label" %>
+          <%= f.text_field :postal_code, class: "form-control" %>
+        </div>
+      </div>
+      <!--住所-->
+      <div class="row">
+        <div class="col-10 col-md-12 form-group">
+          <%= f.label :address, "住所", class: "form-label" %>
+          <%= f.text_field :address, class: "form-control" %>
+        </div>
+      </div>
+      <!--電話番号-->
+      <div class="row">
+        <div class="col-3 form-group">
+          <%= f.label :tel, "電話番号", class: "form-label" %>
+          <%= f.text_field :tel, class: "form-control" %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :last_name_kana, "セイ" %><br />
-    <%= f.text_field :last_name_kana %>
-  </div>
+      <div class="row actions">
+        <%= f.submit "変更を保存", class: "btn btn-success" %>
+      </div>
+    <% end %>
+  </form>
 
-  <div class="field">
-    <%= f.label :first_name_kana, "メイ" %><br />
-    <%= f.text_field :first_name_kana %>
-  </div>
+</section>
 
-  <div class="field">
-    <%= f.label :relationship, "続柄" %><br />
-    <%= f.text_field :relationship %>
-  </div>
-
-  <div class="field">
-    <%= f.label :member_name, "生徒氏名" %><br />
-    <%= f.text_field :member_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :year_of_enrollment, "入学年度" %><br />
-    <%= f.text_field :year_of_enrollment %>
-  </div>
-
-  <div class="field">
-    <%= f.label :postal_code, "郵便番号" %><br />
-    <%= f.text_field :postal_code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :address, "住所" %><br />
-    <%= f.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label :tel, "電話番号" %><br />
-    <%= f.text_field :tel %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "変更を保存" %>
-  </div>
-
-<% end %>
+<!--フッター-->
+<%= render '/layouts/footer' %>
