--- a/app/views/admins/guardians/index.html.erb
+++ b/app/views/admins/guardians/index.html.erb
@@ -1,27 +1,43 @@
-<h1>保護者一覧</h1>
+<section class="inner">
+  <!--セッションタイトル-->
+  <div class="section-ttl">
+    <h4 class="">保護者一覧</h4>
+  </div>
+  <!--保護者登録一覧-->
+  <div class="container admins_guardians_list">
+    <div class="row">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>更新日</th>
+              <th>保護者氏名</th>
+              <th>続柄</th>
+              <th>生徒氏名</th>
+              <th>電話番号</th>
+              <th>メールアドレス</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @guardians.each do |guardian| %>
+            <tr>
+              <td><%= guardian.updated_at.strftime("%Y-%m-%d %H:%M") %></td>
+              <td><%= guardian.last_name + '　' + guardian.first_name %></td>
+              <td><%= guardian.relationship %></td>
+              <td><%= guardian.member_name %></td>
+              <td><%= guardian.tel %></td>
+              <td><%= guardian.email %></td>
+              <td><%= link_to "詳細",  admins_guardian_path(guardian.id) %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>更新日</th>
-      <th>保護者氏名</th>
-      <th>続柄</th>
-      <th>生徒氏名</th>
-      <th>電話番号</th>
-      <th>メールアドレス</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @guardians.each do |guardian| %>
-    <tr>
-      <td><%= guardian.updated_at %></td>
-      <td><%= guardian.last_name + '　' + guardian.first_name %></td>
-      <td><%= guardian.relationship %></td>
-      <td><%= guardian.member_name %></td>
-      <td><%= guardian.tel %></td>
-      <td><%= guardian.email %></td>
-      <td><%= link_to "詳細",  admins_guardian_path(guardian.id) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+</section>
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
