--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,67 +26,67 @@
 
       <!--ナビゲーション-->
       <div class="collapse navbar-collapse" id="navbar-content">
-        <ul  class="navbar-nav mr-auto">
+        <ul class="row navbar-nav mr-auto">
           <% if admin_signed_in? %>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "カテゴリー登録", admins_categories_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "選手・スタッフ管理", admins_members_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "OB紹介管理", admins_graduates_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "スケジュール管理", admins_events_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "試合結果管理", admins_game_results_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3  nav-item">
               <%= link_to "お知らせ管理", admins_informations_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "保護者専用お知らせ管理", admins_information_for_guardians_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "保護者管理", admins_guardians_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "応援グッズ登録", admins_items_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "注文管理", admins_orders_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "お問い合わせ管理", admins_contacts_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col-sm-3 nav-item">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
             </li>
           <% else%>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "サッカー部について", about_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "選手・スタッフ", members_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "お知らせ", informations_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "スケジュール", events_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "試合結果", game_results_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "応援グッズ", items_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "保護者専用", guardians_information_for_guardians_path, class: 'nav-link text-dark' %>
             </li>
-            <li class="nav-item">
+            <li class="col nav-item">
               <%= link_to "お問い合わせ", new_contact_path, class: 'nav-link text-dark' %>
             </li>
           <% end %>
