OB紹介各ページレイアウト調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,3 +81,9 @@ main {
 .admins_guardians_edit {
   width: 620px;
 }
+
+.admins_graduates_list,
+.admins_graduate_info,
+.admins_graduate_edit {
+  width: 620px;
+}
