--- a/app/views/admins/graduates/edit.html.erb
+++ b/app/views/admins/graduates/edit.html.erb
@@ -1,30 +1,49 @@
-<h1>OB紹介登録</h1>
-
-<%= form_with model: @graduate, url: "/admins/graduates/#{@graduate.id}", local:true do |f| %>
-
-  <div class="form_group">
-    <%= f.label :image, "集合写真" %>
-    <%= f.attachment_field :image %>
+<section class="inner">
+  <!--セッションタイトル-->
+  <div class="section-ttl">
+    <h4 class="">OB紹介編集</h4>
   </div>
 
-  <div class="form_group">
-    <%= f.label :year, "卒業年度" %>
-    <%= f.text_field :year %>
+  <div class="container admins_graduate_edit">
+    <%= form_with model: @graduate, url: "/admins/graduates/#{@graduate.id}", local:true do |f| %>
+    <!--OB編集フォーム-->
+      <!--写真-->
+      <div class="row">
+        <div class="col-10 col-md-6 form-group">
+          <%= f.label :image, "集合写真", class: "form-label" %>
+          <%= f.attachment_field :image %>
+        </div>
+      </div>
+      <!--卒業年度-->
+      <div class="row">
+        <div class="col-2 form-group">
+          <%= f.label :year, "卒業年度", class: "form-label" %>
+          <%= f.text_field :year, class: "form-control" %>
+        </div>
+      </div>
+      <!--卒業生一覧-->
+      <div class="row">
+        <div class="col-10 col-md-12 form-group">
+          <%= f.label :member_list, "メンバー", class: "form-label" %><span>（１名ずつ改行して入力してください。）</span>
+          <%= f.text_area :member_list, class: "form-control", rows: "10" %>
+        </div>
+      </div>
+      <!--卒業生の主な進路一覧-->
+      <div class="row">
+        <div class="col-10 col-md-12 form-group">
+          <%= f.label :career_after_graduation, "主な進路", class: "form-label" %><span>（改行して入力してください。）</span>
+          <%= f.text_area :career_after_graduation, class: "form-control", rows: "10" %>
+        </div>
+      </div>
+
+      <div class="row actions">
+        <%= f.submit "編集を保存", class: "btn btn-success" %>
+      </div>
+
+    <% end %>
   </div>
-  
-  <div class="form_group">
-    <%= f.label :member_list, "メンバー一覧" %>
-    <%= f.text_area :member_list %>
-  </div>
-  
-  <div class="form_group">
-    <%= f.label :career_after_graduation, "主な進路" %>
-    <%= f.text_area :career_after_graduation %>
-  </div>
-  
-  <div class="form_group">
-    <%= f.submit "編集を保存" %>
-  </div>
-  
-  
-<% end %>
+
+</section>
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
