--- a/app/views/admins/graduates/index.html.erb
+++ b/app/views/admins/graduates/index.html.erb
@@ -1,27 +1,37 @@
-<h1>OB紹介一覧</h1>
+<section class="inner">
+  <!--セッションタイトル-->
+  <div class="section-ttl">
+    <h4 class="">保護者一覧</h4>
+  </div>
+  <!--OB登録一覧-->
+  <div class="container admins_graduates_list">
+    <div class="row">
+      <%= link_to "OB紹介登録", new_admins_graduate_path, class: "btn btn-success" %>
+    </div>
+    <div class="row">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>卒業年度</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @graduates.each do |graduate| %>
+            <tr>
+              <td><%= graduate.year.to_s + "年度卒業" %></td>
+              <td><%= link_to "詳細", admins_graduate_path(graduate.id), class: "text-dark link-secondary" %></td>
+              <td><%= link_to "削除", admins_graduate_path(graduate.id), method: :delete, "data-confirm" => "削除しますか？", class: "text-danger" %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</section>
 
-<div>
-  <%= link_to "OB紹介登録", new_admins_graduate_path %>
-</div>
-
-<table>
-  <head>
-    <tr>
-      <th>卒業年度</th>
-    </tr>
-  </head>
-  <tbody>
-    <% @graduates.each do |graduate| %>
-    <tr>
-      <td>
-        <%= link_to admins_graduate_path(graduate.id) do %>
-        <%= attachment_image_tag graduate, :image, :fill, 100, 100 %>
-        <% end %>
-      </td>
-      <td><%= graduate.year.to_s + "年度卒業" %></td>
-      <td><%= link_to "編集", edit_admins_graduate_path(graduate.id) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-
-</table>
+<!--フッター-->
+<%= render '/layouts/footer' %>
