--- a/app/views/admins/graduates/show.html.erb
+++ b/app/views/admins/graduates/show.html.erb
@@ -1,14 +1,43 @@
-<h1><%= @graduate.year %>年度の卒業生</h1>
+<section class="inner">
+  <!--セッションタイトル-->
+  <div class="section-ttl">
+    <h4 class=""><%= @graduate.year.to_s + "年度の卒業生" %></h4>
+  </div>
+  <!--卒業生詳細内容-->
+  <div class="container admins_graduate_info">
+    <div class="row">
+      <%= attachment_image_tag @graduate, :image, :fill, 200, 200 %>
+    </div>
+    <div class="row">
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="col-4">項目</th>
+            <th class="col-8">詳細</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+      			<td>メンバー一覧</td>
+      			<td><%= safe_join(@graduate.member_list.split("\n"),tag(:br)) %></td>
+          </tr>
+          <tr>
+          <tr>
+      			<td>主な進路</td>
+      			<td><%= safe_join(@graduate.career_after_graduation.split("\n"),tag(:br)) %></td>
+          </tr>
+          <tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="row">
+      <%= link_to "編集", edit_admins_graduate_path(@graduate.id), class: "btn btn-secondary" %>
+      <%= link_to "削除", admins_graduate_path(@graduate.id), method: :delete, "data-confirm" => "削除しますか？", class: "btn btn-danger" %>
+    </div>
+  </div>
 
-<div>
-  <%= attachment_image_tag @graduate, :image, :fill, 200, 200 %>
-</div>
-<div>
-  <%= safe_join(@graduate.member_list.split("\n"),tag(:br)) %>
-</div>
-<div>
-  <%= safe_join(@graduate.career_after_graduation.split("\n"),tag(:br)) %>
-</div>
 
-<%= link_to "編集", edit_admins_graduate_path(@graduate.id) %>
-<%= link_to "削除", admins_graduate_path(@graduate.id), method: :delete, "data-confirm" => "削除しますか？" %>
+</section>
+
+<!--フッター-->
+<%= render '/layouts/footer' %>
