--- a/app/views/admins/guardians/edit.html.erb
+++ b/app/views/admins/guardians/edit.html.erb
@@ -4,7 +4,7 @@
     <h4 class="">保護者編集画面</h4>
   </div>
 
-  <form class="container admins_guardians_edit">
+  <div class="container admins_guardians_edit">
     <%= form_with model: @guardian, url: "/guardians/homes/#{@guardian.id}", local: true do |f| %>
     <!--保護者編集フォーム-->
       <!--氏名-->
@@ -70,7 +70,7 @@
         <%= f.submit "変更を保存", class: "btn btn-success" %>
       </div>
     <% end %>
-  </form>
+  </div>
 
 </section>
 
